Update of Zen of SFMC article and its addition to footer links

--- a/docs/zen-of-sfmc.mdx
+++ b/docs/zen-of-sfmc.mdx
@@ -1,18 +1,18 @@
 ---
 id: zen-of-sfmc
 title: Zen of SFMC
-description: WIP
+description: Salesforce Marketing Cloud implementation, development and operations Best Practices.
 image: img/og/og-image-solve-with-cloud--page-apps.png
 tags: [Marketing Cloud, Best Practice]
 ---
 
 import { LeadText } from '../src/components/LeadText.js';
 
-<LeadText content="WIP." />
+<LeadText content="Salesforce Marketing Cloud implementation, development and operations Best Practices." />
 
-I'm a huge fan of Tim Petter's [PEP20 - Zen of Python](https://www.python.org/dev/peps/pep-0020/). In 19 short lines, he described his recommendations for writing beautiful Python code. THe outcome transcended the specific language and I see it as a very universal guide on software engineering.
+I'm a huge fan of Tim Petter's [PEP20 - Zen of Python](https://www.python.org/dev/peps/pep-0020/). In 19 short lines, he described his recommendations for writing good Python code. The outcome transcended the specific language and I see it as a very universal guide on software engineering.
 
-In this article I share my Salesforce Marting Cloud adaptation and interpretation of this pearl. Expect minimal modifications to the original text (as most of the recommendations are perfectly valid for our Marketing Automation world), followed by my comments explaining how particular lines can be leveraged in SFMC practice.
+In this article I share my Salesforce Marting Cloud adaptation and interpretation of this pearl. Expect some modifications to the original text (minimal, as most of the recommendations are perfectly valid for our Marketing Automation world), followed by my comments on how particular lines can be beneficial for SFMC practice.
 
 ## Zen of SFMC
 
@@ -35,14 +35,14 @@ Now is better than never.
 Although never is often better than right now.
 If the implementation is hard to explain, it's a bad idea.
 If the implementation is easy to explain, it may be a good idea.
-Documentation is one honking great idea - let's do more of those!
+Documentation is one honking great idea - let's do more of it!
 ```
 
 ## Thoughts on Zen
 
 Remember that those recommendations are just that - recommendations. Not strict rules, but rather a set of general principles that might help you in your day-to-day work with Salesforce Marketing Cloud.
 
-### Beautiful is better than ugly.
+### Beautiful is better than ugly
 
 Beauty might not be the thing that immediately come to mind, when talking about software development and implementation. It might also not be a focus in the world of short deadlines and evergrowing KPIs. However, one should not forget about beauty when deploying Marketing Cloud Solutions.
 
@@ -78,42 +78,114 @@ Creating a Email Template using Blocks in Content Builder? Sure, you can just dr
 
 Both approaches deliver the Email Template, but the second one does it in a beautiful way that makes using it easier and greatly improves value of the solution.
 
-### Explicit is better than implicit.
+### Explicit is better than implicit
 
 
 
-### Simple is better than complex.
+#### Code
 
-### Complex is better than complicated.
+#### Platform
 
-### Flat is better than nested.
+### Simple is better than complex
 
-### Sparse is better than dense.
+#### Code
 
-### Readability counts.
+#### Platform
 
-### Naming conventions counts twice.
+### Complex is better than complicated
 
-### Special cases aren't special enough to break the rules.
+#### Code
 
-### Although practicality beats purity.
+#### Platform
 
-### Errors should never pass silently.
+### Flat is better than nested
 
-### Unless explicitly silenced.
+#### Code
 
-### In the face of ambiguity, refuse the temptation to guess.
+#### Platform
 
-### Even when certain, test.
+### Sparse is better than dense
 
-### Now is better than never.
+#### Code
 
-### Although never is often better than right now.
+#### Platform
 
-### If the implementation is hard to explain, it's a bad idea.
+### Readability counts
 
-### If the implementation is easy to explain, it may be a good idea.
+#### Code
 
-### Documentation is one honking great idea - let's do more of those!
+#### Platform
+
+### Naming conventions counts twice
+
+#### Code
+
+#### Platform
+
+### Special cases aren't special enough to break the rules
+
+#### Code
+
+#### Platform
+
+### Although practicality beats purity
+
+#### Code
+
+#### Platform
+
+### Errors should never pass silently
+
+#### Code
+
+#### Platform
+
+### Unless explicitly silenced
+
+#### Code
+
+#### Platform
+
+### In the face of ambiguity, refuse the temptation to guess
+
+#### Code
+
+#### Platform
+
+### Even when certain, test
+
+#### Code
+
+#### Platform
+
+### Now is better than never
+
+#### Code
+
+#### Platform
+
+### Although never is often better than right now
+
+#### Code
+
+#### Platform
+
+### If the implementation is hard to explain, it's a bad idea
+
+#### Code
+
+#### Platform
+
+### If the implementation is easy to explain, it may be a good idea
+
+#### Code
+
+#### Platform
+
+### Documentation is one honking great idea - let's do more of it!
+
+#### Code
+
+#### Platform
 
 ## Sum Up
